// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list modules should list all the module of a directory 1`] = `
Array [
  Object {
    "module": Object {
      "letter": "b",
    },
    "name": "b.ts",
  },
  Object {
    "module": Object {
      "letter": "c",
    },
    "name": "c.ts",
  },
  Object {
    "module": Object {
      "extra": "extra",
    },
    "name": "extra.tsx",
  },
]
`;

exports[`list modules should list all the modules (recursive) 1`] = `
Array [
  Object {
    "module": Object {
      "letter": "b",
    },
    "name": "b.ts",
  },
  Object {
    "module": Object {
      "letter": "c",
    },
    "name": "c.ts",
  },
  Object {
    "module": Object {
      "extra": "extra",
    },
    "name": "extra.tsx",
  },
  Object {
    "module": Object {
      "letter": "e",
    },
    "name": "e.ts",
  },
  Object {
    "module": Object {
      "letter": "f",
    },
    "name": "f.ts",
  },
]
`;

exports[`list modules should return only \`.tsx\` files 1`] = `
Array [
  Object {
    "module": Object {
      "extra": "extra",
    },
    "name": "extra.tsx",
  },
]
`;
